# walkman_robotran_edu_2017

./: LICENSE  README.md
SfunctionsR/src_copy/: LocalDataStruct.c  LocalDataStruct.h  MBSdataStruct.c  MBSdataStruct.h  MBSdef.h  MBSfun.h  ludcmp.c  lut.c  lut.h  mbs_bakker.c  mbs_calspan.c  mbs_close_loops.c  mbs_compute_model.c  mbs_dirdynared.c  mbs_invdynared.c  mbs_kine_wheel.c  mbs_sf_main.c  mbs_tool.c  nrutil.c  nrutil.h  sf_IOPort.c  sf_InitCond.c  svdcmp.c
StandaloneC/: CMakeLists.txt  README.md
StandaloneC/src/: CMakeLists.txt  RobotranConfig.cmake.in  RobotranConfigVersion.cmake.in
StandaloneC/src/generic/Simbody/: SimbodyBodiesStruct.h  simbody_cpp_functions.cpp  simbody_functions.c
StandaloneC/src/generic/main_files/: finish_simulation.c  init_simulation.c  loop_simulation.c  main_simulation.h  model_main.c
StandaloneC/src/generic/mbs_load_xml/: loadMBSheader_xml.h  mbs_xml_reader.c  mds_translator.h  mstr.c
StandaloneC/src/generic/robotran/: MBSfun.h
StandaloneC/src/generic/robotran_yarp_plugin/: README.md  ToDoList.txt
StandaloneC/src/generic/robotran_yarp_plugin/robotran_plugins/: CMakeLists.txt  common.h  yarp_files.h  yarp_finish.cpp  yarp_init.cpp  yarp_update.cpp
StandaloneC/src/generic/useful/: useful_functions.h
StandaloneC/src/other/conf/: FindJ3D.cmake  FindJNI.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake  FindSimbody.cmake  cmake_config.h
StandaloneC/src/other/save_vector/vectors/: .gitignore
StandaloneC/src/other/user_models/src/: main_header.h  print_c_files.c
StandaloneC/src/other/varState/src/: print_c_files.c
StandaloneC/src/project/controller_files/: ControllerIO_Def.h  ControllersStruct.c  ControllersStruct.h
StandaloneC/src/project/project_files/: events_config.c  info_project.h  plot_config.c  save_vectors_config.c
StandaloneC/src/project/simulation_files/: scope_FTsensor.xml  scope_LegPos.xml  simu_def.h
StandaloneC/src/project/simulation_files/Actuators/: ActuatorStruct.c  ActuatorStruct.h  ActuatorsDefinitions.h  init_actuator_model.c
StandaloneC/src/project/simulation_files/FloatingBaseRestart/: init_floatingBase.c
StandaloneC/src/project/simulation_files/JointController/: PIDs_Struct.c  PIDs_Struct.h  diapason.c.bak  diapason.h  diapason.h~  init_joints_control.c  joints_control.c  torque_pid_gains.txt
StandaloneC/src/project/simulation_files/Sensors/: FT_sensor_Struct.c  FT_sensor_Struct.h  IMU_Struct.c  IMU_Struct.h  init_sensor_model.c
StandaloneC/src/project/simulation_files/Simbody/: ContactPropertiesDefinitions.cpp  README.md  SimbodyBodiesDefinitions.h
StandaloneC/src/project/simulation_files/contactGeom/config/: user_contact_forces.cc  user_contact_kinematics.cc  user_contact_kinematics.hh  user_contact_states.cc  user_contact_states.hh  user_shapes.cc  user_shapes.hh
StandaloneC/src/project/simulation_files/contactGeom/gestion/: ContactGestion.cc  ContactGestion.hh  contact_interface.cc  contact_interface.h
StandaloneC/src/project/simulation_files/contactGeom/shapes/: BasicShape.cc  BasicShape.hh  GeometryShape.hh  MainUnionShape.cc  MainUnionShape.hh  RigidShape.cc  RigidShape.hh  UnionShape.cc  UnionShape.hh
StandaloneC/src/project/simulation_files/contactGeom/utilities/kinematics/: Vector3D.hh
StandaloneC/src/project/simulation_files/meshGCM/interface/: gcm_interface.cc  gcm_interface.h
StandaloneC/src/project/simulation_files/meshGCM/main/: ComputeGCM.cc  ComputeGCM.hh
StandaloneC/src/project/simulation_files/meshGCM/specific_foot/generic/: ContactFoot.cc  ContactFoot.hh
StandaloneC/src/project/simulation_files/meshGCM/specific_foot/rect/: RectFoot.cc  RectFoot.hh
StandaloneC/src/project/simulation_files/meshGCM/specific_ground/equation/: EquationGround.cc  EquationGround.hh
StandaloneC/src/project/simulation_files/meshGCM/specific_ground/equation/linear/: LinearGround.cc  LinearGround.hh
StandaloneC/src/project/simulation_files/meshGCM/specific_ground/flat/: FlatGround.cc  FlatGround.hh
StandaloneC/src/project/simulation_files/meshGCM/specific_ground/generic/: GroundModel.cc  GroundModel.hh
StandaloneC/src/project/simulation_files/meshGCM/specific_whole_feet/generic/: WholeFeet.cc  WholeFeet.hh
StandaloneC/src/project/simulation_files/meshGCM/specific_whole_feet/rect/: WholeRectFeet.cc  WholeRectFeet.hh
StandaloneC/src/project/user_files/: UserModelStruct.c  UserModelStruct.h  userDef.h  user_Derivative.c  user_DrivenJoints.c  user_ExtForces.c  user_JointForces.c  user_all_id.h  user_compute_output.c  user_cons_hJ.c  user_cons_jdqd.c  user_finalization.c  user_initialization.c  user_sf_IO.c  user_sf_IO.h
StandaloneC/src/project/varState/: control_variables.txt  simu_variables.txt
StandaloneC/src/project/yarp_files/conf/walkman/: RoboTran.ini  headMC.ini  left_armMC.ini  left_arm_FT.ini  left_handMC.ini  left_legFT.ini  left_legMC.ini  right_armMC.ini  right_arm_FT.ini  right_handMC.ini  right_legFT.ini  right_legMC.ini  robotMotorGui.ini  torsoMC.ini  torso_IMU.ini
animationR/vrml/: AnklePitch.wrl  AnklePitch_mirror.wrl  BottomUpperArm.wrl  BottomUpperArm_mirror.wrl  Chest.wrl  Elbow.wrl  Floor.wrl  Foot.wrl  Foot_rigth.wrl  (+24 more)
dataR/: walkman_robotran.mbs
symbolicR/: LArm.h  LLeg.h  RArm.h  RLeg.h  delinvdynabar.m  dyn_floating_base.h  dyn_torso.h  ext_force_1.h  ext_force_2.h  head.h  kin_floating_base.h  kin_torso.h  mbs_cons_hJ_walkman_robotran.c  mbs_cons_jdqd_walkman_robotran.c  mbs_dirdyna_walkman_robotran.c  mbs_dirdyna_walkman_robotran.h  mbs_dirdyna_walkman_robotran.m  mbs_extforces_walkman_robotran.c  mbs_extforces_walkman_robotran.m  mbs_gensensor_walkman_robotran.c  mbs_gensensor_walkman_robotran.h  mbs_gensensor_walkman_robotran.m  mbs_invdyna_walkman_robotran.c  mbs_invdyna_walkman_robotran.h  mbs_invdyna_walkman_robotran.m  mbs_link3D_walkman_robotran.c  mbs_link_walkman_robotran.c  mbs_sensor_walkman_robotran.c  mbs_sensor_walkman_robotran.h  mbs_sensor_walkman_robotran.m  stderr.txt  stdout.txt  symb_delinvdynabar.m
userfctR/: user_DirDyn_io.m  user_ExtForces.m  user_JointForces.m  user_all_id.h
workR/: Simulation.m  linearization.m
(+66 files in other folders)
